docs/7.56/bundles/abap-keyword-documentation-abap-release-news-news-for-release-7-5x-news-for-release-7-54.md
# ABAP - Keyword Documentation / ABAP - Release News / News for Release 7.5x / News for Release 7.54

Included pages: 15


### abennews-754.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) → 

News for Release 7.54

The kernel release for Release 7.54 is 7.77.

-   [ABAP Dictionary in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-ddic.htm)
-   [Data Types in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-types.htm)
-   [Assignments in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-assignments.htm)
-   [Character String Processing in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-character_processing.htm)
-   [ABAP SQL in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-abap_sql.htm)
-   [ABAP CDS in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-abap_cds.htm)
-   [AMDP in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-amdp.htm)
-   [Updates in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-update.htm)
-   [Messages in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-messages.htm)
-   [ABAP Unit in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-abap_unit.htm)
-   [ABAP CDS Access Control in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-cds_access_control.htm)
-   [ABAP RESTful Application Programming Model in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-restful.htm)

Continue
[ABAP Dictionary in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-ddic.htm)
[Data Types in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-types.htm)
[Assignments in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-assignments.htm)
[Character String Processing in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-character_processing.htm)
[ABAP SQL in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-abap_sql.htm)
[ABAP CDS in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-abap_cds.htm)
[AMDP in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-amdp.htm)
[Updates in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-update.htm)
[Messages in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-messages.htm)
[ABAP Unit in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-abap_unit.htm)
[ABAP CDS Access Control in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-cds_access_control.htm)
[ABAP RESTful Application Programming Model in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-restful.htm)


### abennews-754-ddic.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

ABAP Dictionary in Release 7.54

[1\. New Built-In Data Types](#!ABAP_MODIFICATION_1@1@)
[2\. Flagging of Obsolete Data in Check Tables](#!ABAP_MODIFICATION_2@2@)

Modification 1   

New Built-In Data Types

The following new [built-in data types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types_intro.htm) were introduced in ABAP Dictionary:

-   [Decimal floating point numbers](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_decimal_floating_point.htm)
    -   [DECFLOAT16](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types.htm)
    -   [DECFLOAT34](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types.htm)
-   [Date fields, time fields, and time stamp fields](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_date_time_types.htm)
    -   [DATN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types.htm)
    -   [TIMN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types.htm)
    -   [UTCLONG](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types.htm)
-   [Geodata types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_geo_data.htm)
    -   [GEOM\_EWKB](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types.htm)

These data types are currently only supported by SAP HANA databases. These types can be mapped to HANA-specific data types but not to other vendor-specific data types. [ABAP-managed database objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_managed_db_object_glosry.htm "Glossary Entry") where these types are used can only be created on SAP HANA databases.

Modification 2   

Flagging of Obsolete Data in Check Tables

A special column can be used to [flag obsolete data](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_deprecation.htm) in check tables. This flag modifies [input checks](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_dynpros_checks.htm) and [input help](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_dynpros_value_help.htm) in dynpros and Web Dynpros.

This flag was ported back to all releases including Release 7.40.


### abennews-754-types.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

Data Types in Release 7.54

Modification

New Built-In ABAP Type utclong

The new built-in [time stamp type](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentimestamp_type_glosry.htm "Glossary Entry") [utclong](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbuiltin_types_date_time.htm) makes it possible to declare [time stamp fields](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentimestamp_field_glosry.htm "Glossary Entry"). The new data type is taken into account in all relevant positions. Important points are:

-   The associated data type in ABAP Dictionary was introduced with the name [UTCLONG](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenddic_builtin_types.htm).
-   The [value range](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbuiltin_types_date_time.htm) of the new data type are [time stamps](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentime_stamp_glosry.htm "Glossary Entry") between "0001-01-01T00:00:00.0000000" and "9999-12-31T23:59:59.9999999" plus a special initial value.
-   In assignments and comparisons, the data type utclong can only be [converted](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenconversion_type_utclong.htm) to the types c and string, and vice versa. In assignments, any attempt to perform another conversion raises an exception of the new class CX\_SY\_CONVERSION\_NOT\_SUPPORTED.
-   Time stamp fields are formatted specially in [string templates](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstring_template_glosry.htm "Glossary Entry") or using the statement [WRITE TO](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapwrite_to.htm).
-   There is a [mapping rule](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_xslt_asxml_elementary.htm) for [asXML](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenasxml_glosry.htm "Glossary Entry").

Time stamp fields must meet an [alignment requirement](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenalignment.htm). Their memory address must be divisible by eight.


### abennews-754-assignments.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

Assignments in Release 7.54

Modification

Calculation Assignments

A [calculation assignment](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencalculation_assignment_glosry.htm "Glossary Entry") is an [assignment](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassignment_glosry.htm "Glossary Entry") with an

-   [addition assignment operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenadd_assignment_op_glosry.htm "Glossary Entry") ([+=](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencalculation_assignments.htm))
-   [subtraction assignment operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensub_assignment_op_glosry.htm "Glossary Entry") ([\-=](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencalculation_assignments.htm))
-   [multiplication assignment operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenmult_assignment_op_glosry.htm "Glossary Entry") ([\*=](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencalculation_assignments.htm))
-   [division assignment operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abendiv_assignment_op_glosry.htm "Glossary Entry") ([/=](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencalculation_assignments.htm))
-   [concatenation assignment operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenconcat_assignment_op_glosry.htm "Glossary Entry") ([&&=](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencalculation_assignment_string.htm)).

A calculation takes place when the assignment is made. These new operators make the statements [ADD](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapadd.htm), [SUBTRACT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapsubtract_multiply_divide.htm), [MULTIPLY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapsubtract_multiply_divide.htm), and [DIVIDE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapsubtract_multiply_divide.htm) obsolete.


### abennews-754-character_processing.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

Character String Processing in Release 7.54

Modification

Decimal Places in Time Stamps

In [embedded expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstring_templates_expressions.htm) of [string templates](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenstring_template_glosry.htm "Glossary Entry") and for the statements [WRITE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapwrite-.htm) *\[* [TO](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapwrite_to.htm)*\]*, the formatting option DECIMALS can now be combined with TIMESTAMP and TIME ZONE to define the number of decimal places in time stamps in packed numbers.


### abennews-754-abap_sql.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

ABAP SQL in Release 7.54

[1\. Extensions of the INTO Clause](#!ABAP_MODIFICATION_1@1@)
[2\. Definition of Associations](#!ABAP_MODIFICATION_2@2@)
[3\. New Aggregate Function STRING\_AGG](#!ABAP_MODIFICATION_3@3@)
[4\. Addition DISTINCT Optional in Aggregate Function COUNT](#!ABAP_MODIFICATION_4@4@)
[5\. Window Expressions](#!ABAP_MODIFICATION_5@5@)
[6\. Temporal SQL Hierarchies](#!ABAP_MODIFICATION_6@6@)
[7\. Hierarchy Navigators](#!ABAP_MODIFICATION_7@7@)
[8\. Aggregate Expressions in SQL Expressions](#!ABAP_MODIFICATION_8@8@)
[9\. Extension of the CAST Matrix](#!ABAP_MODIFICATION_9@9@)
[10\. Client Handling](#!ABAP_MODIFICATION_10@10@)
[11\. Syntax Check for Literals and Host Constants](#!ABAP_MODIFICATION_11@11@)
[12\. SQL Conditions](#!ABAP_MODIFICATION_12@12@)
[13\. New Window Functions](#!ABAP_MODIFICATION_13@13@)
[14\. New Built-In Functions](#!ABAP_MODIFICATION_14@14@)
[15\. Strict Mode in the Syntax Check](#!ABAP_MODIFICATION_15@15@)

Modification 1   

Extensions of the INTO Clause

The [INTO clause](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapinto_clause.htm) has been extended as follows:

-   The new addition [NEW](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_into_target.htm) can be used to implicitly create anonymous data objects as target areas. The addition NEW now also makes inline declarations possible when using dynamic tokens and after the statement [FETCH](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapfetch.htm).
-   The new addition [INDICATORS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_indicators.htm) can be used to specify a [null indicator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennull_indicator_glosry.htm "Glossary Entry").

Modification 2   

Definition of Associations

When associations of a [common table expression](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencommon_table_expression_glosry.htm "Glossary Entry") are published using the addition [WITH ASSOCIATIONS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapwith_associations.htm), new [CTE associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencte_association_glosry.htm "Glossary Entry") can be defined by specifying [JOIN TO ONE*|*MANY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapwith_associations_defining.htm). These CTE associations can be used in the subsequent queries of the current [WITH](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapwith.htm) statement, either in [path expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_path.htm) or as [hierarchy associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenhierarchy_association_glosry.htm "Glossary Entry") in the [hierarchy generator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenhierarchy_generator_glosry.htm "Glossary Entry") [HIERARCHY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenselect_hierarchy_generator.htm).

Definitions of associations require [strict mode from Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_strictmode_754.htm).

Modification 3   

New Aggregate Function STRING\_AGG

The new aggregate function [STRING\_AGG](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_aggregate.htm) can be used to chain character-like results of the rows of the results set of a query or of the current group as a string.

Modification 4   

Addition DISTINCT Optional in Aggregate Function COUNT

The aggregate function [COUNT( sql\_exp )](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_aggregate.htm) can now be used without the addition DISTINCT. In this case, it counts all rows in which the value of the argument is not the [null value](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennull_value_glosry.htm "Glossary Entry").

Modification 5   

Window Expressions

Window expressions defined using [OVER](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_over.htm) can now be used in the [SELECT list](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_list.htm) of a query. Window expressions define windows as a subset of the results set and apply [window functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenwindow_function_glosry.htm "Glossary Entry") to them.

Modification 6   

Temporal SQL Hierarchies

The [hierarchy generator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenhierarchy_generator_glosry.htm "Glossary Entry") [HIERARCHY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenselect_hierarchy_generator.htm) can now use the new addition PERIOD FROM TO VALID FROM TO to create [temporal hierarchies](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentemporal_hierarchy_glosry.htm "Glossary Entry") in which the hierarchy nodes are limited by time intervals.

Modification 7   

Hierarchy Navigators

The new [hierarchy navigator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenhierarchy_navigator_glosry.htm "Glossary Entry") [HIERARCHY\_DESCENDANTS\_AGGREGATE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenselect_hierarchy_agg_navis.htm) can be used to calculate [aggregate functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenaggregate_function_glosry.htm "Glossary Entry") for [descendant nodes](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abendescendant_node_glosry.htm "Glossary Entry").

Modification 8   

Aggregate Expressions in SQL Expressions

From Release 7.54, [aggregate expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_aggregate.htm) can be specified as operands of [SQL expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapsql_expr.htm).

Modification 9   

Extension of the CAST Matrix

The matrix of types that can be converted to each other with a [CAST](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_cast.htm) expression has been expanded. In particular, the [new data types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-ddic.htm) of the ABAP Dictionary are taken into account.

Modification 10   

Client Handling

The new additions

-   [USING *\[*ALL*\]* CLIENTS *\[*IN*\]*](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_client.htm) in queries
-   [USING *\[*ALL*\]* CLIENTS *\[*IN*\]*](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapiumd_client.htm) in write statements

make it possible to switch implicit [client handling](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenclient_handling_glosry.htm "Glossary Entry") from the current default client to multiple clients.

This makes the addition CLIENT SPECIFIED [obsolete](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_client_obsolete.htm) in queries and [obsolete](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapud_client_obsolete.htm) in the write statements UPDATE SET and DELETE FROM.

Modification 11   

Syntax Check for Literals and Host Constants

The fact that conversions of [host variables](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenhost_variable_glosry.htm "Glossary Entry") in read positions need to be [lossless](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmove_exact.htm) is checked for [untyped literals](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_untyped_literals.htm) and [host constants](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenhost_constant_glosry.htm "Glossary Entry") in the strict syntax check modes from [Release 7.50](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_strictmode_750.htm) and [Release 7.51](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_strictmode_751.htm) and hence can produce syntax errors. From Release 7.54, a syntax check warning is produced when this rule is broken outside of the strict mode too.

Modification 12   

SQL Conditions

The [SQL conditions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenasql_cond.htm) were revised as follows:

-   Unlike in all other [relational expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_stmt_logexp.htm) in ABAP SQL, the relational expression [IS *\[*NOT*\]* NULL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenwhere_logexp_null.htm) can now be used to check [LOBs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenlob_glosry.htm "Glossary Entry") and [geodata types](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abengeo_data_type_glosry.htm "Glossary Entry").
-   A new variant of the operator [IN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenwhere_logexp_list_in.htm) can be used to compare multiple operands with a list of value tuples.

Modification 13   

New Window Functions

ABAP SQL now supports the following new [window functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenwindow_function_glosry.htm "Glossary Entry") in [window expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenwindow_expression_glosry.htm "Glossary Entry"):

-   [LEAD](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_win_func.htm) and [LAG](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_win_func.htm).

Modification 14   

New Built-In Functions

ABAP SQL Now supports the following new built-in functions:

-   [UUID](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensql_uuid.htm)

Modification 15   

Strict Mode in the Syntax Check

If one the new features listed above is used in an ABAP SQL statement, the syntax check is performed in a [strict mode](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_sql_strictmode_754.htm), which handles the statement more strictly than the regular syntax check.


### abennews-754-abap_cds.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

ABAP CDS in Release 7.54

[1\. Temporal Hierarchies](#!ABAP_MODIFICATION_1@1@)
[2\. Annotation for Database Hints](#!ABAP_MODIFICATION_2@2@)
[3\. Annotations for Releasing Elements](#!ABAP_MODIFICATION_3@3@)
[4\. CDS Projection Views](#!ABAP_MODIFICATION_4@4@)
[5\. New Date Functions](#!ABAP_MODIFICATION_5@5@)
[6\. New Time Stamp Functions](#!ABAP_MODIFICATION_6@6@)
[7\. New Date/Time Conversion Functions](#!ABAP_MODIFICATION_7@7@)
[8\. Hierarchy Load Options](#!ABAP_MODIFICATION_8@8@)
[9\. CDS custom entities](#!ABAP_MODIFICATION_9@9@)

Modification 1   

Temporal Hierarchies

The new addition PERIOD of the statement [DEFINE HIERARCHY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_define_hierarchy.htm) can now be used to create [temporal hierarchies](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentemporal_hierarchy_glosry.htm "Glossary Entry") in which the hierarchy nodes are limited by time intervals.

Modification 2   

Annotation for Database Hints

The [framework-specific annotation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenfrmwrk_annotation_glosry.htm "Glossary Entry") [@Consumption.dbHints](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_annotations_frmwrk_tables.htm) replaces the [ABAP annotation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_annotation_glosry.htm "Glossary Entry") [@AbapCatalog.dbHints](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_annotations_abap_tables.htm) and makes it obsolete. The ABAP annotation is evaluated by frameworks such as [SADL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abensadl_glosry.htm "Glossary Entry") and not by the ABAP runtime environment.

Modification 3   

Annotations for Releasing Elements

The new element annotations

-   [@API.element.releaseState](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_element_annotation.htm)
-   [@API.element.successor](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_element_annotation.htm)
-   can be used to override releases of the individual elements and successors can be specified for forbidden elements.

Modification 4   

CDS Projection Views

A [CDS projection view](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_define_view_as_projection.htm) is a direct projection of the underlying CDS view and exposes only a subset of elements of the projected entity. A CDS projection view is defined using DEFINE VIEW ENTITY AS PROJECTION ON in a CDS data definition.

Modification 5   

New Date Functions

ABAP CDS now supports the following new date functions:

-   [DATN\_DAYS\_BETWEEN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_functions_v1.htm)
-   [DATN\_ADD\_DAYS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_functions_v1.htm)
-   [DATN\_ADD\_MONTHS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_functions_v1.htm)

Modification 6   

New Time Stamp Functions

ABAP CDS now supports the following new time stamp functions:

-   [UTCL\_CURRENT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_timestamp_functions_v1.htm)
-   [UTCL\_ADD\_SECONDS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_timestamp_functions_v1.htm)
-   [UTCL\_SECONDS\_BETWEEN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_timestamp_functions_v1.htm)

Modification 7   

New Date/Time Conversion Functions

ABAP CDS now supports the following new [date/time conversion functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_time_conversions_v1.htm):

-   [TSTMPL\_TO\_UTCL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_time_conversions_v1.htm) and [TSTMPL\_FROM\_UTCL](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_time_conversions_v1.htm)
-   [DATS\_TO\_DATN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_time_conversions_v1.htm) and [DATS\_FROM\_DATN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_time_conversions_v1.htm)
-   [TIMS\_TO\_TIMN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_time_conversions_v1.htm) and [TIMS\_FROM\_TIMN](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_date_time_conversions_v1.htm)

Modification 8   

Hierarchy Load Options

The [hierarchy generator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_define_hierarchy.htm) [DEFINE HIERARCHY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_define_hierarchy.htm) can now use the new addition LOAD BULK*|*INCREMENTAL*|*load\_option to specify the load policy for a generated hierarchy.

Modification 9   

CDS custom entities

A new type of [CDS entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_entity_glosry.htm "Glossary Entry") is available: the [CDS custom entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_custom_entities.htm). CDS custom entities are used in the [RAP framework](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_framework_glosry.htm "Glossary Entry") to implement ABAP queries in CDS.


### abennews-754-amdp.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

AMDP in Release 7.54

[1\. Specifying CDS Entities After USING](#!ABAP_MODIFICATION_1@1@)
[2\. Quotation Marks for Logical Schemas](#!ABAP_MODIFICATION_2@2@)

Modification 1   

Specifying CDS Entities After USING

In the implementation of the AMDP method, the name of the [CDS entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_entity_glosry.htm "Glossary Entry") can now be specified after the [USING](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmethod_by_db_proc.htm) addition for [CDS views](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_view_glosry.htm "Glossary Entry"), [CDS table functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_table_function_glosry.htm "Glossary Entry"), and [CDS hierarchies](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_hierarchy_glosry.htm "Glossary Entry"). The name of the [CDS managed DDIC view](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_mngdddic_view_glosry.htm "Glossary Entry") of a CDS view or of the [AMDP function](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenamdp_function_glosry.htm "Glossary Entry") of a CDS table function can still be specified, but is best replaced by specifying CDS entities. If a CDS entity is specified, all other database objects of CDS entities must be also be specified using this entity.

Modification 2   

Quotation Marks for Logical Schemas

If the predefined [AMDP macro](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenamdp_macro_glosry.htm "Glossary Entry") [$ABAP.schema](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenamdp_logical_db_schemas.htm) is specified for a [logical schema](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenlogical_schema_glosry.htm "Glossary Entry"), the optional addition quote can now be used to define which quotation marks are used when the macro is replaced.


### abennews-754-update.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

Updates in Release 7.54

Modification

Authorization Checks in Updates

[No authorization checks](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenauthority_during_update.htm) must be made in [updates](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenupdate_glosry.htm "Glossary Entry").

-   This rule was not always applied before Release 7.54:
    -   The statement [AUTHORITY-CHECK](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapauthority-check.htm) only omitted authorization checks in [update sessions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenupdate_session_glosry.htm "Glossary Entry") and always set sy-subrc to 0 here.
    -   In [local updates](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenlocal_update_glosry.htm "Glossary Entry"), on the other hand, AUTHORITY-CHECK made an authorization check.
    -   When using ABAP SQL to access a CDS entity for which a CDS role is defined, implicit [CDS access control](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_access_control_glosry.htm "Glossary Entry") was applied in local updates and in update sessions by default.
-   The following applies to [local updates](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenlocal_update_glosry.htm "Glossary Entry") and to [update sessions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenupdate_session_glosry.htm "Glossary Entry") from Release 7.54:
    -   In updates, the statement [AUTHORITY-CHECK](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapauthority-check.htm) always sets the value sy-subrc to 0 and does not make any authorization checks.
    -   [CDS access control](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_access_control_glosry.htm "Glossary Entry") cannot take place. If the ABAP SQL statement [SELECT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect.htm) is used in an update to access a [CDS entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_entity_glosry.htm "Glossary Entry") for which access control is not disabled using the value #NOT\_ALLOWED for the annotation [@AccessControl.authorizationCheck](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_view_anno_v1.htm) or using the addition [WITH PRIVILEGED ACCESS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapselect_data_source.htm) in the [FROM](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapfrom_clause.htm) clause, the [runtime error](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenruntime_error_glosry.htm "Glossary Entry") SYSTEM\_UPDATE\_TASK\_ILL\_STMT occurs.


### abennews-754-messages.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

Messages in Release 7.54

Modification

Implicit Message Type in IF\_T100\_DYN\_MSG

If the object reference variable oref in the variant [MESSAGE oref](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmessage_msg.htm) of the statement [MESSAGE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmessage.htm) for sending a message points to an object that includes the system interface [IF\_T100\_DYN\_MSG](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenif_t100_dyn_msg.htm), the addition TYPE can be omitted and the message type from the interface attribute MSGTY of the object is used implicitly.

Until now, however, the statement MESSAGE oref could only have the further additions [RAISING](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmessage_raising.htm) and [DISPLAY LIKE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmessage.htm) if TYPE was specified explicitly. These additions are now also possible if TYPE is not specified.


### abennews-754-abap_unit.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

ABAP Unit in Release 7.54

Modification

Using Test Classes

[Test classes](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abentest_class_glosry.htm "Glossary Entry") and their components cannot be addressed in the production code of programs and must be addressed only in other test classes. A static check and a full check at runtime are now applied to verify this. Until now it was possible to address certain components of test class in production code. In production systems, this required the [profile parameter](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenprofile_parameter_glosry.htm "Glossary Entry") abap/test\_generation to be set accordingly.


### abennews-754-cds_access_control.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

ABAP CDS Access Control in Release 7.54

[1\. Addition COMBINATION MODE OR*|*AND of the Statement GRANT SELECT ON](#!ABAP_MODIFICATION_1@1@)
[2\. Addition REDEFINITION of the Statement GRANT SELECT ON](#!ABAP_MODIFICATION_2@2@)
[3\. Addition IN SCENARIO of the Statement GRANT SELECT ON](#!ABAP_MODIFICATION_3@3@)
[4\. Generic Aspect Condition of the Statement DEFINE ROLE](#!ABAP_MODIFICATION_4@4@)
[5\. New Variant INHERITING CONDITIONS FROM SUPER](#!ABAP_MODIFICATION_5@5@)
[6\. Different REPLACING Operators](#!ABAP_MODIFICATION_6@6@)
[7\. REPLACING Operator ELEMENT ... WITH](#!ABAP_MODIFICATION_7@7@)
[8\. Definition of a Generic Aspect](#!ABAP_MODIFICATION_8@8@)
[9\. DCL Restrictions for ABAP CDS Hierarchies](#!ABAP_MODIFICATION_9@9@)
[10\. DCL Restrictions for Transactional CDS Projection Views](#!ABAP_MODIFICATION_10@10@)

Modification 1   

Addition COMBINATION MODE OR*|*AND of the Statement GRANT SELECT ON

The optional addition [COMBINATION MODE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_dcl_role_cond_rule.htm) can now be used to define how the access conditions of multiple CDS access rules for the same CDS entity are combined.

Modification 2   

Addition REDEFINITION of the Statement GRANT SELECT ON

The addition [REDEFINITION](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_dcl_role_cond_rule.htm) is used to indicate that the specified CDS access rule is the only existing access rule and any other access rules are ignored.

Modification 3   

Addition IN SCENARIO of the Statement GRANT SELECT ON

The optional addition [IN SCENARIO](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_cond_pfcg.htm) can be used to apply the switchable authorization check to an authorization object.

Modification 4   

Generic Aspect Condition of the Statement DEFINE ROLE

An aspect condition can now be used to specify the [generic aspect](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_cond_aspect.htm) defined in an aspect definition in the right side introduced by ASPECT.

Modification 5   

New Variant INHERITING CONDITIONS FROM SUPER

There is now another [variant](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_cond_inherit.htm) of the inheritance condition in an access rule of the statement DEFINE ROLE, which applies the access conditions from SUPER.

Modification 6   

Different REPLACING Operators

The optional addition [REPLACING](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_cond_inherit.htm) of INHERITING CONDITIONS can be used to modify the inherited conditions.

Modification 7   

REPLACING Operator ELEMENT ... WITH

Any number of [ELEMENT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_cond_inherit.htm) operators can be used to transform conditions that use fields of the inherited entity to a different field of the inheriting entity.

Modification 8   

Definition of a Generic Aspect

A [generic aspect](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_define_generic_aspect.htm) can now be defined as part of a CDS access policy itself defined using DEFINE ACCESSPOLICY.

Modification 9   

DCL Restrictions for ABAP CDS Hierarchies

ABAP CDS hierarchies can now be protected using [access controls](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_dcl_hierarchies.htm).

Modification 10   

DCL Restrictions for Transactional CDS Projection Views

Transactional projection view entities apply the [access control](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_dcl_projection_views.htm) of the underlying CDS entity with restrictions.


### abennews-754-restful.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

ABAP RESTful Application Programming Model in Release 7.54

In release 7.54, the [ABAP RESTful Application Programming Model (RAP)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenarap_glosry.htm "Glossary Entry") was enhanced as follows:

-   [CDS BDL in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-cds_bdl.htm)

Continue
[CDS BDL in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-cds_bdl.htm)


### abennews-754-cds_bdl.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) →  [ABAP RESTful Application Programming Model in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-restful.htm) → 

CDS BDL in Release 7.54

[1\. Managed RAP BO](#!ABAP_MODIFICATION_1@1@)
[2\. Business Object Projection](#!ABAP_MODIFICATION_2@2@)

Modification 1   

Managed RAP BO

The new statement [managed](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_impl_type.htm) can be used to create [managed RAP BOs](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenmanaged_rap_bo_glosry.htm "Glossary Entry") within the framework of the ABAP RESTful Application Programming Model. This scenario is intended for greenfield developments that are developed from scratch. Standard operations and services are provided by the RAP framework.

Modification 2   

Business Object Projection

The new statement [projection](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_impl_type.htm) can be used to create [projections](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_projection_bo_glosry.htm "Glossary Entry") of a business object. This allows to project and to alias a subset of a business object for a specific business service within the framework of the ABAP RESTful Application Programming Model.


### abennews-754-restful.htm

  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754.htm) → 

ABAP RESTful Application Programming Model in Release 7.54

In release 7.54, the [ABAP RESTful Application Programming Model (RAP)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenarap_glosry.htm "Glossary Entry") was enhanced as follows:

-   [CDS BDL in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-cds_bdl.htm)

Continue
[CDS BDL in Release 7.54](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-754-cds_bdl.htm)
